# Project3-CUDA-Path-Tracer

./: CMakeLists.txt  README.md
scenes/: cornellMove.txt  cornellMove2.txt  cornellclose.txt
src/: CMakeLists.txt  common.h  interactions.h  intersections.h  pathtrace.cu  scene.cpp  scene.h  sceneStructs.h
stream_compaction/: efficient.cu  efficient.h
